[FE,BE,DOC] Show pie chart category distribution in each coordinate layout, and Api update inventory layout
